finished adding path into schema. now doing final line and fixes

--- a/network_modeling/img/sinchModel.tex
+++ b/network_modeling/img/sinchModel.tex
@@ -16,7 +16,7 @@
   \node[my circle] (tl2) at ( -9,-7) {$TL_2$};
   \node[my circle] (faKa2) at ( -6,2) {$FA_{k_a-2}$};
   \node[my circle] (fl3) at ( -6,7) {$FL_3$};
-  \node[my circle] (taKl2) at ( -6,-2) {$TA_{k_l-2}$};
+  \node[my circle] (taKa2) at ( -6,-2) {$TA_{k_l-2}$};
   \node[my circle] (tl3) at ( -6,-7) {$TL_3$};
   \node[my circle] (fa1) at ( 2,2) {$FA_1$};
   \node[my circle] (fa2) at ( -2,2) {$FA_2$};
@@ -30,11 +30,11 @@
   % --- PATH INVOLVING H ---
   %
   \path[-stealth] (H) edge[loop left]  node{$P_{NL}$} (H);
-  \draw[-stealth] (H.south) .. controls +(down:1cm) and +(left:1cm) .. node[above,rotate=-40] {$P_{TL}$} (tl1.west);
-  \path[->] (tl1.north west) edge[bend right] node[below, rotate=-45] {$1-P_{C}$}  (H.south east);
+  \draw[-stealth] (H.south) .. controls +(down:1cm) and +(left:1cm) .. node[above,rotate=-60] {$P_{TL}$} (tl1.west);
+  \path[->] (tl1) edge[bend right] node[below right, rotate=-65] {$1-P_{C}$}  (H.south east);
   \draw[->] (H.north) .. controls +(up:1cm) and +(left:1cm) .. node[above,rotate=70] {$P_{FL}$} (fl1.west);
-  \path[->] (fl1) edge[bend ,out=240,in=60] node[above, rotate=60] {$1-P_{FA}$}  (H);
-  \path[->] (fl2.north west) edge[bend right =60] node[above, rotate=50] {$1-P_{FA}$}  (H.north west);
+  \path[->] (fl1) edge[bend right,out=0,in=180] node[above, rotate=60] {$1-P_{FA}$}  (H);
+  \path[->] (fl2.north west) edge[bend right =70] node[above, rotate=50] {$1-P_{FA}$}  (H.north west);
 
   %
   % --- PATH INVOLVING TL# ---
@@ -43,12 +43,23 @@
 
   \draw[->] (tl2.east) .. controls +(right:1cm) and +(left:1cm) .. node[above] {$P_C$} (tl3.west);
 
-  \draw[->] (tl2.south west) .. controls +(left:3cm) and +(down:3cm) .. node[above right,rotate=-45] {$1-P_C$} (H.south west);
+  \path[->] (tl2) edge[bend left,in=100,out=80,min distance=0.3cm] node[above left, rotate=-55] {$1-P_C$} (H);
 
-  \draw[->] (tl3.east) .. controls +(right:1cm) and +(left:1cm) .. node[above] {$P_C^{k_{l}-2}$} (tl.west);
-
-  \draw[->] (tl3.south) .. controls +(down:3cm) and +(down:8cm) .. node[above right, rotate=-20] {$1-P_C$} (H.south west);
-
+  \draw[-stealth] (tl3.east) .. controls +(right:1cm) and +(left:1cm) .. node[above] {$P_C^{k_{l}-2}$} (tl.west);
+  \path[-stealth] (tl3) edge[bend left,in=70,out=100,min distance=6.5cm] node[above right, rotate=-35] {$1-P_C$} (H);
+  \path[-stealth] (tl) edge[in=-110, out=-20,min distance=2cm]  node[above,rotate=25]{$P_{C}$} (tl);
+  %
+  % --- PATH INVOLVING TA# ---
+  %
+  \path[->] (tl) edge[bend right] node[above, rotate=40] {$1-P_C$} (ta1);
+  \path[->] (ta1) edge[bend right] node[above, rotate=40] {$P_C$} (tl);
+  \path[->] (ta1) edge[bend right] node[above, rotate=-30] {$1-P_C$} (ta2);
+  \path[->] (ta2) edge[] node[right, rotate=0] {$P_C$} (tl);
+  \path[->] (ta2) edge[bend right] node[above, rotate=0] {$1-P_C$} (taKa2);
+  \path[-stealth,blue,dotted] (taKa2) edge[bend left] node[below left, rotate=0] {$P_C$} (tl);
+  \path[->] (taKa2) edge[bend right] node[above, rotate=0] {$1-P_C$} (taKa1);
+  \path[-stealth,blue,dotted] (taKa1) edge[bend right, in=180,out=-40] node[above, rotate=0] {$P_C$} (tl);
+  \path[->] (taKa1) edge[in=-30,out=170] node[above right, rotate=-10] {$1-P_C$} (H);
   %
   % --- PATH INVOLVING FL# ---
   %
@@ -59,7 +70,9 @@
   \path[-stealth] (fl) edge[in=80, out=10, loop]  node[above,rotate=-40]{$P_{NL}$} (fl);
   \path[-stealth] (fl.east) edge[bend left] node[above,rotate=-50] {$1-P_{FA}$}  (fa1.north);
   \path[-stealth] (fa1.north west) edge[bend left] node[above,rotate=-50] {$P_{FA}$}  (fl.south east);
-  \path[->] (fl2) edge[bend ,out=240,in=40] node[above left, rotate=50] {$1-P_{FA}$} (H);
+  \path[->] (fl3) edge[bend left ,out=260,in=-80,min distance=6cm] node[above left, rotate=45] {$1-P_{FA}$} (H);
+
+
   %
   % --- PATH INVOLVING FA# ---
   %
@@ -70,5 +83,6 @@
   \path[-stealth] (faKa1) edge[bend left] node[above,rotate=20] {$1-P_{FA}$}  (H);
   \path[-stealth, dotted,red] (faKa2) edge[bend left,in=-200,out=20] node[below,red, rotate=50] {$P_{FA}$}  (fl);
   \path[-stealth, dotted,red] (faKa1) edge[bend left,in=-200,out=20] node[below,red, rotate=50] {$P_{FA}$}  (fl);
+
 \end{tikzpicture}
 \end{document}
