Added correctly the synchronization model figure
Need to check for other minor errors

--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -149,8 +149,9 @@ We have to consider that the system can make mistakes, so we have to distinguish
 
 \begin{figure}
 	\centering
-  \input{img/sinchModel.tex}
-	\caption{Synchronization model}
+  % \includegraphics[width=\textwidth]{img/sinchModel.tex}
+	\resizebox{\textwidth}{!}{\input{img/sinchModel.tex}}
+	\caption{Synchronization model schema: the green area is where we'd like to be, so that the system is synchronized.}
 	\label{fig:syncmodel}
 \end{figure}
 
