--- a/network_modeling/img/sinchModel.tex
+++ b/network_modeling/img/sinchModel.tex
@@ -1,7 +1,7 @@
-\documentclass{standalone}
-\usepackage[usenames, dvipsnames, table, tikz]{xcolor}
-\usepackage{tikz}
-\begin{document}
+% \documentclass{standalone}
+% \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
+% \usepackage{tikz}
+% \begin{document}
 \begin{tikzpicture}
   [
     my circle/.style={minimum width=20mm, circle, draw},
@@ -56,9 +56,9 @@
   \path[->] (ta1) edge[bend right] node[above, rotate=-30] {$1-P_C$} (ta2);
   \path[->] (ta2) edge[] node[right, rotate=0] {$P_C$} (tl);
   \path[->] (ta2) edge[bend right] node[above, rotate=0] {$1-P_C$} (taKa2);
-  \path[-stealth,blue,dotted] (taKa2) edge[bend left] node[below left, rotate=0] {$P_C$} (tl);
+  \path[-stealth,dotted] (taKa2) edge[bend left] node[below left, rotate=0] {$P_C$} (tl);
   \path[->] (taKa2) edge[bend right] node[above, rotate=0] {$1-P_C$} (taKa1);
-  \path[-stealth,blue,dotted] (taKa1) edge[bend right, in=180,out=-40] node[above, rotate=0] {$P_C$} (tl);
+  \path[-stealth,dotted] (taKa1) edge[bend right, in=180,out=-40] node[above, rotate=0] {$P_C$} (tl);
   \path[->] (taKa1) edge[in=-30,out=170] node[above right, rotate=-10] {$1-P_C$} (H);
   %
   % --- PATH INVOLVING FL# ---
@@ -81,8 +81,11 @@
   \path[-stealth] (fa2) edge[bend left] node[below] {$(1-P_{FA})^{k_a -2}$}  (faKa2); %verify formula. not sure
   \path[-stealth] (faKa2) edge[bend left] node[below] {$1-P_{FA}$}  (faKa1);
   \path[-stealth] (faKa1) edge[bend left] node[above,rotate=20] {$1-P_{FA}$}  (H);
-  \path[-stealth, dotted,red] (faKa2) edge[bend left,in=-200,out=20] node[below,red, rotate=50] {$P_{FA}$}  (fl);
-  \path[-stealth, dotted,red] (faKa1) edge[bend left,in=-200,out=20] node[below,red, rotate=50] {$P_{FA}$}  (fl);
+  \path[-stealth, dotted] (faKa2) edge[bend left,in=-200,out=20] node[below, rotate=50] {$P_{FA}$}  (fl);
+  \path[-stealth, dotted] (faKa1) edge[bend left,in=-200,out=20] node[below, rotate=50] {$P_{FA}$}  (fl);
+
+  %Final line where I'd like to be
+  \draw[dotted,fill=green!70, opacity=0.15] plot [smooth cycle] coordinates {(3.3,-2.5) (3.3,-5) (2,-7) (1,-8) (-0.5,-9) (-10,-9) (-14,-6) (-13,-3) (-10,0) (0.5,0) (2,-1)};
 
 \end{tikzpicture}
-\end{document}
+% \end{document}
