--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -202,7 +202,7 @@ We have to consider that the system can make mistakes, so we have to distinguish
 		\draw[->] (4.east) .. controls +(right:0cm) and +(left:0cm) .. node[above] {$P_W$} (8.west);
 		\draw[->] (4.west) .. controls +(left:3cm) and +(up:3cm) .. node[above] {$1-P_W$} (1.north west);
 		\draw[->] (8.east) .. controls +(right:0cm) and +(left:0cm) .. node[above] {$P_W$} (16.west);
-		\draw[->] (8.north) .. controls +(up:3cm) and +(up:8cm) .. node[above] {$1-P_C$} (1.north west);
+		\draw[->] (8.north) .. controls +(up:3cm) and +(up:8cm) .. node[above] {$1-P_W$} (1.north west);
 		\draw[->] (16.east) .. controls +(right:0cm) and +(left:0cm) .. node[above] {$P_W$} (12.west);
 
 		\draw[->] (12.east) .. controls +(right:1cm) and +(right:1cm) .. node[above] {$1-P_W$} (13.east);
