--- a/network_modeling/img/Theorem_3.1.tex
+++ b/network_modeling/img/Theorem_3.1.tex
@@ -1,12 +1,19 @@
-\documentclass{standalone}
-\usepackage{tikz,pgfplots}
+% \documentclass{standalone}
+% \usepackage{tikz,pgfplots}
 \usetikzlibrary{decorations.pathreplacing,patterns}
 \pgfplotsset{compat=newest}
-\begin{document}
+\pgfdeclarepatternformonly{my lines}{\pgfqpoint{0cm}{0cm}}{\pgfqpoint{1.2cm}{1.2cm}}{\pgfqpoint{1.2cm}{1.2cm}}%
+{
+  \pgfsetlinewidth{0.1pt}
+  \pgfpathmoveto{\pgfqpoint{0cm}{0cm}}
+  \pgfpathlineto{\pgfqpoint{3cm}{3cm}}
+  \pgfusepath{stroke}
+}
+% \begin{document}
   \begin{tikzpicture}
-    \newcommand\n{0.7};
-    \newcommand\N{0.5};
-    \newcommand\Cp{0.6};
+    \newcommand\fign{0.7};
+    \newcommand\figN{0.5};
+    \newcommand\figCp{0.6};
 
     \begin{axis}[axis lines=middle,samples=200
             ,ylabel=$time$
@@ -24,24 +31,27 @@
                 anchor=south,
               },
             ,xtick=data,
-            ,xtick={\Cp}
+            ,xtick={\figCp}
             ,xticklabels={}
             ,ytick=data,
-            ,ytick={\N,\n}
+            ,ytick={\figN,\fign}
             ,yticklabels={N,n}
             ]
-            \draw [fill=orange,orange,opacity=0.2,draw=none] (0,0) rectangle (\Cp,\N);
-            \draw [fill=red,red,opacity=0.2,draw=none] (0,\N) rectangle (\Cp,\n);
-            \draw [yellow,opacity=0.3,fill=yellow,draw=none] (\Cp,0) rectangle (2\Cp,\n);
+            \draw [fill=orange,orange,opacity=0.2,draw=none] (0,0) rectangle (\figCp,\figN) node[text=black,pos=.5, text opacity=1]{$\alpha$};
+            \draw [fill=red,red,opacity=0.2,draw=none] (0,\figN) rectangle (\figCp,\fign);
+            \draw [yellow,opacity=0.3,fill=yellow,draw=none] (\figCp,0) rectangle (2\figCp,\fign);
             \begin{scope}{on foreground layer}    % select the background layer
-                \draw[pattern=north east lines,draw=none] (\Cp,0) rectangle (2\Cp,\n);
-                \draw[pattern=north east lines,draw=none] (0,\N) rectangle (\Cp,\n);
+                \draw[pattern=my lines,draw=none] (\figCp,0) rectangle (2\figCp,\fign) ;
+                \draw[pattern=my lines,draw=none] (0,\figN) rectangle (\figCp,\fign) node[black,pos=0.5]{$\beta$};
             \end{scope}
-            \draw[pattern=north east lines,draw=none] (0,\n) rectangle (2\Cp,2\n);
-            % underbraces
-            % \draw [thick, red,decorate, decoration={brace,amplitude=10pt ,mirror} ,xshift=0.4pt,yshift=-0.4pt] (0,.2) -- (\Cp,0) node[black,midway,yshift=-0.6cm] {\footnotesize $t$} ;
-            \draw[decorate,decoration={brace,mirror},thick]  ([yshift=-5pt]axis cs:0,0) --    node[below=3pt] {$C^\prime$}   ([yshift=-5pt]axis cs:\Cp,0);
+            \draw[pattern=my lines,draw=none] (0,\fign) rectangle (2\figCp,2\fign);
+            \node[black,pos=.5,text opacity=1,text width= 2cm] at (axis cs:\figCp,1) {$\gamma$};
+            %  underbraces
+
+            \draw[decorate,decoration={brace,mirror},thick]  ([yshift=-5pt]axis cs:0,0) --    node[below=3pt] {$C^\prime$}   ([yshift=-5pt]axis cs:\figCp,0);
             \draw[decorate,decoration={brace,mirror},thick]  ([yshift=-20pt]axis cs:0,0) --    node[below=3pt] {$C$}   ([yshift=-20pt]axis cs:1.3,0);
+
+            \node[] at (axis cs: \figCp+0.25,\figN-0.13) {$\gamma$};
           \end{axis}
   \end{tikzpicture}
-\end{document}
+% \end{document}
