--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -620,6 +620,60 @@ In conclusion, we found that the average first passage time is equal to the aver
 		\end{enumerate}
 	\end{proof}
 
+	\subsection{G/M/1 queue limiting distribution}
+	We know that the limiting distribution is the solution of the following system of equations:
+	\begin{equation*}
+		\begin{split}
+			\begin{cases}
+				\pi_k = \sum_i \pi_i p_{ik} \\
+				\sum_i \pi_i = 1
+			\end{cases}
+		\end{split}
+	\end{equation*}
+	In our case this is equal to:
+	$$\pi_k = \sum_{i = k-1}^{+\infty} \pi_i \int_0^{+\infty}e^{-\mu t} \frac{(\mu t)^{i+1-k}}{(i+1-k)!}dG(t) \hspace{1cm} \text{for } k \geq 1$$
+	We try to verify the guessing $\pi_k=c\beta^k$ (geometric distribution).
+	\begin{equation*}
+		\begin{split}
+			c\beta^k &= \sum_{i = k-1}^{+\infty} c\beta^i \int_0^{+\infty}e^{-\mu t} \frac{(\mu t)^{i+1-k}}{(i+1-k)!}dG(t) \\
+			&= c \int_0^{+\infty}e^{-\mu t}\beta^{k-1}\sum_{i = k-1}^{+\infty}\frac{(\beta \mu t)^{i+1-k}}{(i+1-k)!}dG(t) \\
+			&= c \int_0^{+\infty}e^{-\mu t}~\beta^{k-1}~ e^{\beta \mu t}~dG(t)
+		\end{split}
+	\end{equation*}
+	Therefore $\beta^k = \int_0^{+\infty}e^{-\mu(1-\beta)t}\beta^{k-1}dG(t)$\\
+	and
+	\begin{equation*}
+		\begin{split}
+			\beta &= \int_0^{+\infty}e^{-\mu(1-\beta)t}dG(t)\\
+			&= \E[e^{-\mu(1-\beta)t}]\\
+			&\triangleq A(\beta)
+		\end{split}
+	\end{equation*}
+	We have to solve $\beta = A(\beta)$: %minding the condition $\beta \in (0;1)$
+	\begin{enumerate}
+		\item $A(0) = \int_0^{+\infty}e^{-\mu(1-\beta)t}dG(t)=\int_0^{+\infty}e^{-\mu t}dG(t) > 0$
+		\item $A(1) =\int_0^{+\infty}dG(t)= 1 $
+		\item $A^{'}(\beta)=\int_0^{+\infty}e^{-\mu(1-\beta)t}(\mu t)dG(t) > 0$, therefore $A(\beta)$ is a monotonic increasing function
+		\item $A^{''}(\beta)=\int_0^{+\infty}e^{-\mu(1-\beta)t}(\mu t)^2dG(t) > 0$, therefore $A(\beta)$ is a concave function
+	\end{enumerate}
+	%%GRAPH MISSING
+	\begin{figure}[h!]
+		\input{img/cBetaToK.tex}
+		\caption{The value of $\beta^*$ is the intersection of the function $A(\beta)=\exp\left[e^{-\mu(1-\beta)t}\right]$ and the line $A(\beta)=\beta$}
+		\label{fig:cBetaK}
+	\end{figure}
+	If 2 is $A(\beta)$ there is no conclusion (no intersection). If, instead, 1 is $A(\beta)$ there is one intersection which is the solution and the chain is positive recurrent with $\pi_k = (1-\beta^*)(\beta^*)^k$.[\Fig{fig:cBetaK}]\\
+	The third possibility is $\beta^* = 1$ and the curve is tangent. Coming from below, $A^{'}(1)>1$, therefore $\frac{\mu}{\lambda}>1$. We know from queing theory that the condition $\lambda < \mu$ is a sufficient condition for the stability of the chain. In this example, we are not able to find a solution if $\lambda > \mu$, in principle there should be no conclusion, but we know there is no solution from queing theory.
+
+\subsection*{Periodic case for average first return time}
+We discussed, so far, only an aperiodic MC: the case where $P_{ii}^{(n)}=0$ if n is not a multiple of the period implies no convergence, which means that the MC has an oscillatory behaviour. Let's now consider $d$ the period s.t. $P_{ii}^{(m \cdot d)}\neq 0~\forall m\in \N $ (we take into account only positive values). The average first return time ($m_i$) can be calculated as
+\begin{equation}
+	\lim_{m\to+\infty} P_{ii}^{(m \cdot d)} = \frac{d}{m_i}
+\end{equation}
+We can ignore the $d$ value if we calculate:
+\begin{equation}
+	\lim_{n\to+\infty}\left[\frac{1}{n}\sum\limits_{k=0}^{n-1} P_{ii}^{(k)} = \frac{1}{m_i}\right]
+\end{equation}
 	\begin{definition}[lesson 22/03/17] \label{def:falling_probability}
 		Given a recurrent class $C$ and a transient state $i \notin C$, the probability of entering in that class through state $k \in C$ at step $n$ can be written as
 		$$ \pi_{ik}^{(n)}(C) = \prob[X_n = k \in C, x_l \notin C ~ \forall l=1, ..., n-1 | X_0 = i] $$
